# irrational-synth-software

./: .gitmodules  CMakeLists.txt  main.cpp
Backend/: AudioBackend.cpp  AudioBackend.h  AudioProcessorDevice.h
Backend/PureData/: PDObject.cpp  PDObject.h  PureData_AudioProcessorDevice.cpp  PureData_AudioProcessorDevice.h  controlSpec.h
FrontEnd/: Window.cpp  Window.h
patch/: Messagetest.pd  test.pd
rtaudio/: Makefile  Makefile.in  config.status  configure  librtaudio.la  librtaudio_la-RtAudio.lo  librtaudio_la-rtaudio_c.lo  libtool  rtaudio.pc
rtaudio/.deps/: librtaudio_la-RtAudio.Plo  librtaudio_la-rtaudio_c.Plo
rtaudio/.libs/: librtaudio.lai  librtaudio.so.6.0.1
rtaudio/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
rtaudio/doc/: Makefile  Makefile.in
rtaudio/doc/html/: RtAudio_8h.html  RtAudio_8h_source.html  acknowledge.html  annotated.html  apinotes.html  classRtAudio-members.html  classRtAudio.html  classRtAudioError-members.html  classRtAudioError.html  classes.html  compiling.html  duplex.html  errors.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__C-interface.html  index.html  license.html  modules.html  multi.html  pages.html  playback.html  probe.html  recording.html  rtaudio__c_8h.html  rtaudio__c_8h_source.html  settings.html  (+6 more)
rtaudio/tests/: Makefile  Makefile.in  apinames  audioprobe  duplex  playraw  playsaw  record  testall  teststops
(+16 files in other folders)
